remove dependecy